apps/playground/yohanb-prototype/canary/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary
  annotations:
    argocd.argoproj.io/sync-wave: '90'
spec:
  replicas: 10
  revisionHistoryLimit: 1
  rollbackWindow: # https://argo-rollouts.readthedocs.io/en/stable/features/rollback/
    revisions: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: canary
      app.kubernetes.io/name: prototype
  template:
    metadata:
      labels:
        app.kubernetes.io/component: canary
        app.kubernetes.io/name: prototype
    spec:
      containers:
      - name: rollouts-demo
        image: ybelval/rollouts-demo:green
        imagePullPolicy: Never
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
#        startupProbe: # sleep between 15 and 30 seconds
#          exec:
#            command:
#              - bash
#              - -c
#              - |-
#                sleep $(( (RANDOM % 1) + 0 ))
          timeoutSeconds: 30
  strategy:
    canary:
      canaryService: canary-prototype-preview
      stableService: canary-prototype-stable
      scaleDownDelaySeconds: 3600
      scaleDownDelayRevisionLimit: 1
      trafficRouting:
        istio:
          virtualService:
            name: canary-prototype   # required
            routes:
              - primary            # optional if there is a single route in VirtualService, required otherwise
      steps:
      - setWeight: 20
      - setCanaryScale: # scale replicaset to 100% with only 20% traffic
          weight: 100
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
