apps/playground/yohanb-prototype/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-prototype-stable
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/component: canary
    app.kubernetes.io/name: prototype
---
apiVersion: v1
kind: Service
metadata:
  name: canary-prototype-preview
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/component: canary
    app.kubernetes.io/name: prototype
