apps/playground/yohanb-prototype/canary/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        protocol: HTTP2
        number: 80
        name: http2
      hosts:
        - "*"
