apps/playground/yohanb-prototype/canary/route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary-prototype
spec:
  gateways:
    - web
  hosts:
    - "proto.dev.argoproj.io"
  http:
    - name: primary
      route:
        - destination:
            host: canary-prototype-stable
          weight: 100
        - destination:
            host: canary-prototype-preview
          weight: 0
